--- a/01-introduction/content.adoc
+++ b/01-introduction/content.adoc
@@ -2,18 +2,16 @@
 
 この本はプログラミング言語 Crystal の入門書です。おそらくまとまった一冊の書籍としては世界初の初心者向け Crystal 本になっています。
 
-本書を手に取っていただいた方の中には、 Crystal というプログラミング言語について初めて知ったという方もいるかもしれません。 Crystal は、その
-
-- Fast as C, slick as Ruby
-
-というキャッチコピーからもわかるように、
+Crystal が誕生したのは5年ほど前のことです。 Crystal は、
 
 - C 言語のように高速で
 - Ruby のように書きやすく生産性が高い
 
-プログラミング言語として開発されています。
+プログラミング言語を目指して Manas Technology Solutions 社よって開発されました。現在はオープンソースのプロジェクトとなっており、Crystal コミュニティと呼ぶべき有志によって精力的に開発されています。そして、とうとうバージョン1.0のリリースが見えてくるところまで完成度が高まりました。
 
-ただ、どのようなプログラミング言語かということに関しては、言葉で説明するよりも実際のプログラムを見てもらう方が早いですよね。次のプログラムは、Crystal でごくシンプルな HTTP サーバを実装したプログラムです。
+このように Crystal は新しいプログラミング言語ですので、本書を手に取っていただいた方の中には、 Crystal というプログラミング言語について初めて知ったという方もいるかもしれません。そこで、このはじまりの章では Crystal の特徴について概要を簡単に紹介していきます。
+
+ただ、どのようなプログラミング言語かということに関しては、言葉で説明するよりもまず実際のプログラムを見てもらってイメージをつかんでもらう方が早いですよね。次のプログラムは、Crystal でごくシンプルな HTTP サーバを実装したプログラムです。
 
 [source,crystal]
 ----
@@ -26,7 +24,7 @@ include::./examples/very_basic_http_server.cr[tags=code;main]
 
 === コンパイラ言語 Crystal
 
-Crystal の処理系はコンパイラとして提供されます。このことはつまり、Crystal のプログラムを実行するには、Crystal コンパイラでソースコードをコンパイルし実行ファイルを生成する必要があることを示しています。これはシンタックスが類似する Ruby がコンパイル不要なインタプリタ型言語であることとは対照的です。
+Crystal の処理系はコンパイラとして提供されます。このことはつまり、Crystal のプログラムを実行するには、Crystal コンパイラでソースコードをコンパイルし実行ファイルを生成する必要があることを示しています。これはシンタックスが類似する Ruby がコンパイル不要なインタプリタ型言語として作られていることとは対照的です。
 
 NOTE: より正確に言うと、Ruby も実行する際に内部的にコンパイル処理を行なっているのですが、ここでは話を単純にするために実質的にインタプリタ型言語と分類しています
 
@@ -40,7 +38,9 @@ Crystal は静的型付けのプログラミング言語です。これも、動
 
 プログラムの中で、データの型は静的に解析されチェックが行われます。このことによって、型の不一致などはコンパイル時に補足され、実行時にエラーになってしまうことを防止できます。
 
-ただ、Crystal は強力な型推論の仕組みを備えているため、多くの場合はプログラマが自分で型を指定する必要がありません。例えば、次の簡単なプログラムを見てください。
+ただ、Crystal は強力な型推論の仕組みを備えているため、多くの場合はプログラマが自分で面倒な型指定をしなくてもよいようになっています。
+
+例えば、次の簡単なプログラムを見てください。
 
 [source,crystal]
 ----
@@ -52,7 +52,7 @@ include::./examples/type_system.cr[tags=code;main]
 - 環境変数 `FOO` が存在すればその値の文字列（`String` 型）
 - 存在しなければ `10` という数値（`Int32` 型）
 
-を代入し、`foo` の型と `shout(foo)` の型を `typeof` によって調査するものです。`shout` メソッドの中では、引数として渡されたデータを `to_s` と `upcase` というメソッドによって大文字の文字列に変換しています。このとき、 `String` も `Int32` もどちらも `to_s` という文字列変換メソッドを持っていることがコンパイラによって正しく推論されるため、型を指定していなくてもエラーにはなりません。`typeof` の結果を見てみましょう。`foo` の型は実行時まで `String` か `Int32` かが判定できないために両方の複合型（ユニオン型）になっています。一方、 `shout(foo)` は戻り値の型から `String` だということが保証されるため、その型も `String` として正しく推論されていることがわかります。
+を代入し、`foo` の型と `shout(foo)` の型を `typeof` によって調査するものです。`shout` メソッドの中では、引数として渡されたデータを `to_s` と `upcase` というメソッドによって大文字の文字列に変換しています。このとき、 `String` も `Int32` もどちらも `to_s` という文字列変換メソッドを持っていることがコンパイラによって正しく推論されるため、型を指定していなくてもエラーにはなりません。続いて `typeof` の結果を見てみましょう。`foo` の型は実行時まで `String` か `Int32` かが判定できないために両方の複合型（ユニオン型）になっています。一方、 `shout(foo)` は戻り値の型から `String` だということが保証されるため、その型も `String` として正しく推論されていることがわかります。
 
 === Null 安全性
 
@@ -60,7 +60,7 @@ include::./examples/type_system.cr[tags=code;main]
 
 NOTE: https://www.infoq.com/presentations/Null-References-The-Billion-Dollar-Mistake-Tony-Hoare[Null References: The Billion Dollar Mistake - Tony Hoare]
 
-実際にプログラミングをしていても、Null に 対して何か操作しようとしてエラーになった経験のないプログラマはなかなかいないとおもいます。Java の `NullPointerException` などはよく話のネタになりますよね。
+実際にプログラミングをしていても、おそらくほとんどの人が Null に 対して何か操作しようとしてエラーになってつらい経験をしたことがあるのではないでしょうか。Java の `NullPointerException` などはよく話のネタになりますよね。
 
 そこで、最近のモダンなプログラミング言語は Null 安全性を取り入れているものが多くなってきており、Crystal も例外ではありません。
 
@@ -108,17 +108,13 @@ puts my_string.upcase
 
 === パッケージ管理
 
-現代的なプログラミングでは OSS などで提供されるライブラリをいくつも利用することがごく一般的ですが、その依存関係を管理するのはとても大変です。したがって、パッケージングのシステムが充実しているかどうかはプログラミング言語の利用しやすさにおいて大きな位置を占めています。
+現代的なプログラミングでは OSS などで提供されるライブラリをいくつも利用することがごく一般的ですが、数が多くなってくるとその依存関係を管理するのはとても大変です。したがって、パッケージングのシステムがあるかどうかはプログラミング言語の利用しやすさにおいて大きな位置を占めています。
 
 Crystal には Shards というパッケージ管理のシステムがあります。この Shards についても後の章で詳しく触れます。
 
 === Crystal のコミュニティ
 
-本章では、Crystal の特徴を簡単に説明しました。Crystal がどのようにして「 C のように高速で Ruby のように書きやすい」ということを実現しているかの概要だけでも把握していただき、Crystal の魅力を感じていただけたら幸いです。
-
-次の章から、Crystal プログラミングの実践的な内容に入っていきますが、その前に Crystal の情報を得るためのサイトやコミュニティについての情報を記載します。
-
-Crystal の情報や
+プログラミング言語を使うときには、その言語自体の仕様はもちろんですが、その言語コミュニティが充実していることも大事ですよね。ここでは、Crystal のコミュニティや公式の一次情報を得るためのサイトを紹介します。
 
 https://crystal-lang.org[https://crystal-lang.org（英語）]
 
@@ -140,4 +136,10 @@ http://crystal.pine.moe[Crystal-JP の Slack（日本語）]
 
 日本の Crystal ユーザコミュニティ「 Crystal-JP 」の Slack への招待ページです。Crystal-JP の Slack では日本語で Crystal の情報交換を行うことができます。お気軽に参加ください。また、Crystal-JP では不定期に（今のところ東京のみですが）イベントを開催しており、そのお知らせなども主にこの Slack で告知されます。
 
-最後になりますが、本書で利用している Crystal のバージョンは `0.24.1` です。異なるバージョンの Crystal では掲載されているプログラムが期待通りに動作しない可能性もあります。予めご了承ください。
+=== まとめ
+
+本章では、Crystal の特徴を簡単に説明しました。Crystal がどのようにして「 C のように高速で Ruby のように書きやすい」ということを実現しているかの概要だけでも把握していただき、Crystal の魅力を感じていただけたら幸いです。
+
+次の章からはより実践的な Crystal のプログラミングについて説明していきます。
+
+最後になりますが、本書で利用している Crystal のバージョンは `0.24.2` です。異なるバージョンの Crystal では掲載されているプログラムが期待通りに動作しない可能性もあります。予めご了承ください。
