--- a/07-web-development/content.adoc
+++ b/07-web-development/content.adoc
@@ -2,7 +2,7 @@
 
 
 この章では、 Crystal を用いて Web 開発を行う方法について解説します。 +
-本サンプルで使用する Crystal のバージョンは「0.24.1」で確認しています。
+本サンプルで使用する Crystal のバージョンは `0.24.2` で確認しています。
 
 === Crystal の Web フレームワーク
 
@@ -23,17 +23,18 @@ Ruby でいうところの Sinatra に似た設計思想で作られており、
 === Kemal による Web 開発
 
 それでは本章から Kemal による Web 開発を、サンプルを交えながら説明します。
-また本サンプルに使用する Kemal のバージョンは「0.22.0」を想定しています。
+また本サンプルに使用する Kemal のバージョンは `0.22.0` を想定しています。
 
 ==== Kemal インストール
 
 適当な作業用のディレクトリ以下で、以下のコードを実行してみます。ディレクトリが作成され幾つかのファイルがひな形から作成されます。 +
 本稿ではサンプルアプリを kemal-sample として進めます。
 
-....
+[source,shell]
+----
 crystal init app kemal-sample
 cd kemal-sample
-....
+----
 
 shard.yml ファイルに以下の内容を追記します。
 
@@ -44,23 +45,24 @@ include::./projects/kemal-sample/shard.yml[lines=11..14]
 
 以下のコマンドを実行することで Kemal 本体をインストールすることが出来ます。
 
-....
+[source,shell]
+----
 shards install
-....
+----
 
 ==== Kemal FirstStep
 
 インストールまで問題なく動かせたら続いて簡単なサンプルを作成してみましょう。 +
-カレントの src ディレクトリ以下の「 kemal-sample.cr 」に以下の追記を行います。
+カレントの src ディレクトリ以下の `kemal-sample.cr` に以下の追記を行います。
 
 まず行頭に以下の行を足します。
 
-....
-
+[source,crystal]
+----
 require "kemal"
-....
+----
 
-続いて「 module Kemal::Sample 」内に以下の内容を追記します。
+続いて `module Kemal::Sample` 内に以下の内容を追記します。
 
 [source,crystal]
 ----
@@ -69,12 +71,13 @@ include::./projects/kemal-sample/src/kemal-sample.cr[tags=hello]
 
 末尾の行に以下の内容を追記します。
 
-....
+[source,crystal]
+----
 Kemal.run
-....
+----
 
 画面側の処理を作成します。 +
-src 以下に view ディレクトリを作成し、以下の hello.ecr ファイルを view ディレクトリ内に作成します。
+`src` 以下に view ディレクトリを作成し、以下の `hello.ecr` ファイルを `view` ディレクトリ内に作成します。
 
 [source,html]
 ----
@@ -83,7 +86,8 @@ include::./projects/kemal-sample/src/views/hello.ecr[]
 
 Kemal の基本的な使い方として、 REST の動詞 GET POST PUT DELETE を以下の形で記述します。
 
-....
+[source,crystal]
+----
 get "/path" do |env|
   # 処理
 end
@@ -91,18 +95,19 @@ end
 post "/path" do |env|
   # 処理
 end
-....
+----
 
 詳しい内容については後述します。
 先ずは記述したら、以下のコマンドでビルド、実行します。
 
-....
+[source,shell]
+----
 crystal build src/kemal-sample.cr
 ./kemal-sample
-....
+----
 
-ブラウザで「http://localhost:3000/」でアクセスします。 +
-「 Hello World 」と表示されていれば問題ありません。
+ブラウザで `http://localhost:3000/` でアクセスします。 +
+`Hello World` と表示されていれば問題ありません。
 
 ==== DB と連動する
 
@@ -119,9 +124,10 @@ crystal build src/kemal-sample.cr
 |============
 
 DB を作成します。
-....
+[source,shell]
+----
 createdb kemal_sample_development -O your_owner
-....
+----
 
 DDL を作成しロードします。
 
@@ -130,9 +136,10 @@ DDL を作成しロードします。
 include::./projects/kemal-sample/sql/create_articles.sql[]
 ----
 
-....
+[source,shell]
+----
 psql -U your_owner -d kemal_sample_development -f sql/create_articles.sql
-....
+----
 
 作成した後、 shard.yml ファイルに以下の内容を追記します。
 
@@ -143,9 +150,10 @@ include::./projects/kemal-sample/shard.yml[lines=11..18]
 
 編集後、以下のコマンドを実行します。
 
-....
+[source,shell]
+----
 shards install
-....
+----
 
 ==== 投稿一覧ページの編集
 
@@ -155,7 +163,7 @@ shards install
 
 ==== レイアウトページの作成
 
-まずひな形のページを application.ecr という名前で作成します。
+まずひな形のページを `application.ecr` という名前で作成します。
 
 [source,html]
 ----
@@ -163,7 +171,7 @@ include::./projects/kemal-sample/src/views/application.ecr[]
 ----
 
 本サンプルでは BootStrap を使用します。 +
-CDN を使用しますので特にダウンロード不要ですが、ダウンロードする場合は別途「 http://getbootstrap.com/ 」から必要なファイルをダウンロードし、プロジェクトカレントの /public 以下に配置してください。
+CDN を使用しますので特にダウンロード不要ですが、ダウンロードする場合は別途 `http://getbootstrap.com/` から必要なファイルをダウンロードし、プロジェクトカレントの `/public` 以下に配置してください。
 
 ==== CSS の作成
 
@@ -209,13 +217,14 @@ kemal-sample.cr を以下の内容で修正します。
 
 行頭を以下の内容に修正します。
 
-....
+[source,crystal]
+----
 require "kemal"
 require "db"
 require "pg"
-....
+----
 
-続いて「 module Kemal::Sample 」内に以下の内容を追記します。
+続いて `module Kemal::Sample` 内に以下の内容を追記します。
 
 [source,crystal]
 ----
@@ -234,22 +243,24 @@ include::./projects/kemal-sample/src/kemal-sample.cr[tags=query]
 ----
 
 query メソッドに SQL クエリを記述し、ループ内で結果を格納していきます。 +
-1件だけ取得したい場合は query_one もしくは `query_one?` を使います。後者は1件もデータが無い場合がありうる場合に使います。  
+1件だけ取得したい場合は `query_one` もしくは `query_one?` を使います。後者は1件もデータが無い場合がありうる場合に使います。  
 
-....
+[source,crystal]
+----
   sql = "select id, title, body from articles where id = $1::int8"
   article["id"], article["title"], article["body"] = 
     db.query_one(sql, params, as: {Int32, String, String})
-....
+----
 
-query_one の戻り値は、 as で指定した型の Touple になります。  
+`query_one` の戻り値は、 `as` で指定した型の `Touple` になります。  
 
-....
+[source,crystal]
+----
 render "src/views/articles/show.ecr", "src/views/application.ecr"
-....
+----
 
 の形式で ecr ファイルをレンダリングすることで、 Rails のようにファイルを入れ子の形で描画することが出来ます。
 
-Web アプリ再起動後に http://localhost:3000/ にアクセスすると、まだ記事が投稿されていないので空欄になっています。 +
-http://localhost:3000/articles/new にアクセスすると、タイトルと本文を入力する画面が表示されており、入力後に一覧に遷移すると成功です。 +
+Web アプリ再起動後に `http://localhost:3000/` にアクセスすると、まだ記事が投稿されていないので空欄になっています。 +
+`http://localhost:3000/articles/new` にアクセスすると、タイトルと本文を入力する画面が表示されており、入力後に一覧に遷移すると成功です。 +
 記事タイトルをクリックすると詳細画面に遷移すると成功です。
