Partially supress InvalidSymbol

--- a/01-introduction/content.adoc
+++ b/01-introduction/content.adoc
@@ -34,6 +34,7 @@ Crystal はコンパイラ型の言語となっていることで、実行時速
 
 また、コンパイルすることで直接実行できるファイルが生成されるので、実行する環境に処理系を用意する必要がなくアプリケーションのデプロイが容易なことも利点の1つです。なお、本書では詳細には触れませんが、Crystal はコンパイラ基盤に LLVM を利用しており、各プラットフォームに最適化した実行ファイルの生成が可能になっています。
 
+[suppress='InvalidSymbol']
 === Crystal の型システム
 
 Crystal は静的型付けのプログラミング言語です。これも、動的型付け言語の Ruby とは異なった Crystal の大きな特徴です。
