--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -21,6 +21,26 @@ NOTE: Ruby にある `=begin` と `=end` による複数行のコメントは Cr
 
 === リテラル
 
+Crystal にはこれらのリテラルがあります。
+
+- `nil`
+- 論理値
+- 数値
+- シンボル
+- *文字*
+- 文字列
+- 配列
+- ハッシュ
+- 範囲
+- 正規表現
+- *タプル*
+- *名前付きタプル*
+- Proc
+
+ここではこれらを紹介していきます。
+
+NOTE: *文字*、*タプル*、*名前付きタプル*は Ruby には存在しないものです。
+
 ==== `nil`
 
 何も無い値を意味する `nil` というリテラルがあります。
@@ -117,4 +137,164 @@ include::./examples/string.cr[]
 
 ==== 配列
 
-配列も Ruby と同じように、
+配列も Ruby と同じように `[` と `]` の中に `,` で要素を区切って配置します。
+
+文字列の配列には `%w` から始まる形式が利用できます。
+
+[source,crystal]
+----
+include::./examples/array.cr[]
+----
+
+Ruby と大きく異なるのは空の配列を作る際に、`of` に続けて型を明記しなければいけないところです。
+現在の型推論では空の配列がどんな型の要素を持つか正しく推論できないためです。
+同じような制約が Hash にもあります。
+
+[source,crystal]
+----
+include::./examples/empty-array.cr[]
+----
+
+また、一度作った配列の型は後から変更できません。
+つまり、数値の配列に文字列を追加したら数値と文字列の配列になる、といったことは無く、コンパイル時にエラーになります。
+
+[source,crystal]
+----
+include::./examples/push-array.cr[]
+----
+
+==== ハッシュ
+
+ハッシュも Ruby と同じように `{` と `}` の中に `=>` の左右にキーとバリューを置いたものを `,` で区切って配置します。
+
+Ruby にある `:` で区切るとキーがシンボルになる形式は Crystal では名前付きタプルになるので使えません。
+
+[source,crystal]
+----
+include::./examples/hash.cr[]
+----
+
+==== 範囲
+
+範囲も Ruby と同じで、 `..` か `\...` の左右に範囲の始まりと終わりの値を置きます。
+
+`..` と `\...` の違いは、 `..` は終わりの値を含んで、 `\...` は終わりの値を含まないところです。
+
+[source,crystal]
+----
+include::./examples/range.cr[]
+----
+
+==== 正規表現
+
+正規表現も Ruby と同じで `/` で囲みます。
+
+また `%r` から始まる形式も利用できます。
+
+[source,crystal]
+----
+include::./examples/regex.cr[]
+----
+
+NOTE: Ruby では正規表現のクラスは `Regexp` ですが、Crystal では `Regex` です。
+
+NOTE: Ruby の正規表現エンジンは Onigmo ですが、 Crystal は PCRE です。なので、使える構文に差異があることに注意してください。
+
+// Onigmo と PCRE の違いについて触れる。
+
+==== タプル、名前付きタプル
+
+タプルと名前付きタプルは Ruby には無い概念です。
+
+タプルは配列のようなものですが、大きさが固定で変更できません。
+配列の構文を `[]` を使うところを `{}` に変えたような構文になります。
+
+名前付きタプルはハッシュのようなものですが、キーにシンボル以外取れず、大きさが固定で変更できません。
+ハッシュの構文にある `=>` を `:` に変えたような構文になります。
+
+タプルはスプラット展開してメソッドの引数に渡す際に使います。
+名前付きタプルはスプラット展開してメソッドの名前付き引数に渡す際に使います。
+
+[source,crystal]
+----
+include::./examples/tuple.cr[]
+----
+
+==== Proc
+
+`Proc` も Ruby と同じように `\->` で作れますが、引数の型を明示しなければいけません。
+
+[source,crystal]
+----
+include::./examples/proc.cr[]
+----
+
+Crystal では Ruby ほど `Proc` を使いません。
+
+=== 変数
+
+変数は `=` で代入できて、その名前で参照できます。
+
+また、複数代入もできます。
+
+[source,crystal]
+----
+include::./examples/variable.cr[]
+----
+
+=== 条件分岐と繰り返し構文
+
+Crystal にも Ruby とほぼ同等の条件分岐・繰り返しの構文があり、大体同じように使えます。
+
+==== 条件分岐の構文
+
+- `if`、`elsif`、`else`
+- `unless`
+- `case`、`when`
+- 三項演算子
+
+`case` 構文では内部的には Ruby と同じように `===` 演算子を使います。
+
+[source,crystal]
+----
+include::./examples/conditional.cr[]
+----
+
+==== 繰り返しの構文
+
+- `while`
+- `until`
+
+NOTE: Crystal には後置 `while` ・後置 `until` はありません。
+
+[source,crystal]
+----
+include::./examples/repeat.cr[]
+----
+
+==== 型制限
+
+これらの構文の条件部分に単純に変数を渡して `nil` かどうか確かめたり、 `is_a?` を使って変数の型を確かめたりすると、それによって変数の型が制限されます。
+
+[source,crystal]
+----
+include::./examples/restriction.cr[]
+----
+
+=== `require`
+
+Crystal では `require` はメソッドではなく構文です。
+
+別のファイルを読み込み、定義などを取り入れます。
+
+`./` から始まるパスは、そのファイルからの相対パスを意味して、そうでないパスはライブラリのパスを意味します。
+
+`**` で終わるパスはディレクトリを再帰的に読んで Crystal のファイルを読み込み、 `*` で終わるパスの場合はそのディレクトリにある Crystal のファイルを全て読み込みます。
+
+パスがディレクトリ名だった場合、ディレクトリの中の同名の Crystal のファイルを読み込みます。
+（例えば `./foo` と `foo` ディレクトリを読んだ場合、 `foo/foo.cr` を読み込みます）
+
+[source,crystal]
+----
+include::./examples/require.cr[]
+----
