--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -291,8 +291,8 @@ Crystal では `require` はメソッドではなく構文です。
 
 `**` で終わるパスはディレクトリを再帰的に読んで Crystal のファイルを読み込み、 `*` で終わるパスの場合はそのディレクトリにある Crystal のファイルを全て読み込みます。
 
-パスがディレクトリ名だった場合、ディレクトリの中の同名の Crystal のファイルを読み込みます。
-（例えば `./foo` と `foo` ディレクトリを読んだ場合、 `foo/foo.cr` を読み込みます）
+パスがディレクトリ名の場合、ディレクトリにある同名のファイルを読み込みます。
+例えば `./foo` と `foo` ディレクトリを読んだ場合、 `foo/foo.cr` を読み込みます。
 
 [source,crystal]
 ----
